# stm32_cmake_actions_build

./: .gitignore  CMakeLists.txt  README.md  before_build.sh  build.sh  stm32.cmake  toolchain_stm32.cmake
.github/workflows/: main.yml
cmake/: config_stm32.cmake
template/: CMakeLists.txt
template/Inc/: main.h
template/Src/: main.c
